# lerobot-quality-gates

./: CHANGELOG.md  README.md  action.yml  pyproject.toml
docs/: github-action.md  hf-dataset-card.md
examples/mock_lerobot_v3_good/data/chunk-000/: episode_000.json  episode_001.json
src/lerobot_quality_gates/: __init__.py  cli.py  dataset_loader.py  report.py
src/lerobot_quality_gates/checks/: episodes.py  video.py
tests/: test_lerobot_quality_gates.py  test_metadata.py
