[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-quality-gates"
version = "0.1.6"
description = "Check LeRobot-style metadata, episodes, sensors, videos, labels, and dataset-card disclosures."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AuraOne", email = "opensource@auraone.ai" }]
keywords = [
  "ci",
  "data-quality",
  "dataset-cards",
  "huggingface",
  "lerobot",
  "robotics-datasets",
  "training-readiness",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Robotics",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://auraone.ai/open"
Source = "https://github.com/auraoneai/lerobot-quality-gates"
Issues = "https://github.com/auraoneai/lerobot-quality-gates/issues"
Documentation = "https://github.com/auraoneai/lerobot-quality-gates#readme"
"GitHub Action" = "https://github.com/auraoneai/lerobot-quality-gates/blob/main/docs/github-action.md"
Changelog = "https://github.com/auraoneai/lerobot-quality-gates/blob/main/CHANGELOG.md"
Security = "https://github.com/auraoneai/lerobot-quality-gates/security/policy"

[project.scripts]
lerobot-quality-gates = "lerobot_quality_gates.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
